--- a/gdbus-c++/meson.build
+++ b/gdbus-c++/meson.build
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
+# SPDX-License-Identifier: Apache-2.0
+
 deps = [
     dependency('gio-unix-2.0')
 ]
