--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
+# SPDX-License-Identifier: Apache-2.0
+
 project('gdbus-c++', 'cpp',
          version: '0.1.0',
          default_options: ['cpp_std=c++17', 'warning_level=3'])
