--- a/.github/workflows/linux-build.yaml
+++ b/.github/workflows/linux-build.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: false
@@ -21,35 +21,35 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Update Repositories
+    - name: Update repositories
       run: sudo apt-get update -qq
 
-    - name: Setup Python
+    - name: Setup python3
       run: sudo apt-get install -qq -y python3 python3-pip
 
-    - name: Setup Ninja
+    - name: Setup ninja-build
       run: sudo apt-get install -qq -y ninja-build
 
-    - name: Setup GCC
+    - name: Setup gcc
       if: ${{ matrix.cxx == 'g++' }}
       run: sudo apt-get install -qq -y gcc
 
-    - name: Setup Clang
+    - name: Setup clang
       if: ${{ matrix.cxx == 'clang++' }}
       run: sudo apt-get install -qq -y clang
 
-    - name: Setup Meson
+    - name: Setup meson
       run: python3 -m pip install meson
 
-    - name: Setup GLib 2.0
+    - name: Setup glib-2.0
       run: sudo apt-get install -qq -y libglib2.0-dev
 
-    - name: Meson Configure
+    - name: Meson configure
       run: |
         CXX=${{ matrix.cxx }} meson setup builddir \
           --fatal-meson-warnings \
           --werror \
           --buildtype ${{ matrix.flavor }}
 
-    - name: Meson Build
+    - name: Meson build
       run: meson compile -C builddir
