--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,12 +1,4 @@
 # SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
 # SPDX-License-Identifier: Apache-2.0
 
-deps = [
-    gdbuscpp_dep,
-]
-
-src = [
-    'main.cpp'
-]
-
-executable('example', src, dependencies: deps)
+option('GDBUS_CPP_BUILD_EXAMPLE', type: 'boolean', value: true)
