gdbus-c++: add support for both library type

--- a/options/meson.build
+++ b/options/meson.build
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
 # SPDX-License-Identifier: Apache-2.0
 
-set_variable('GDBUS_CPP_BUILD_SHARED_LIBRARY', get_option('default_library') == 'shared')
+set_variable('GDBUS_CPP_BUILD_SHARED_LIBRARY', get_option('default_library') != 'static')
 set_variable('GDBUS_CPP_BUILD_EXAMPLE', get_option('GDBUS_CPP_BUILD_EXAMPLE'))
