--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
+# SPDX-FileCopyrightText: Copyright 2024 Denis Glazkov <glazzk.off@mail.ru>
+# SPDX-License-Identifier: Apache-2.0
+
 .vscode
 builddir
