ci: build library with debug logging

--- a/.github/workflows/linux-build.yaml
+++ b/.github/workflows/linux-build.yaml
@@ -51,7 +51,8 @@ jobs:
           --fatal-meson-warnings \
           --werror \
           --buildtype ${{ matrix.flavor }} \
-          --default-library ${{ matrix.library }}
+          --default-library ${{ matrix.library }} \
+          -DGDBUS_CPP_ENABLE_DEBUG_LOGGING=true
 
     - name: Meson build
       run: meson compile -C builddir
