--- a/meson.build
+++ b/meson.build
@@ -4,11 +4,15 @@
 project('gdbus-c++', 'cpp',
          version: '0.1.0',
          license: 'Apache-2.0',
-         default_options: ['cpp_std=c++17', 'warning_level=3'])
+         default_options: ['cpp_std=c++20', 'warning_level=3'])
 
 subdir('options')
 subdir('gdbus-c++')
 
 if GDBUS_CPP_BUILD_EXAMPLE
     subdir('samples')
+endif
+
+if GDBUS_CPP_BUILD_TESTS
+    subdir('tests')
 endif
